--- a/src/app.html
+++ b/src/app.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html
+	lang="en"
+	data-theme="pastel"
+>
+	<head>
+		<meta charset="utf-8" />
+		<link
+			rel="icon"
+			href="%sveltekit.assets%/favicon.png"
+		/>
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1"
+		/>
+		%sveltekit.head%
+	</head>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  %sveltekit.head%
-</head>
-
-<body>
-  <div>%sveltekit.body%</div>
-</body>
-
+	<body>
+		<div>%sveltekit.body%</div>
+	</body>
 </html>
