add umami tracker

--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,11 @@
 				? document.documentElement.setAttribute('color-scheme', theme)
 				: localStorage.setItem('color-scheme', 'dark')
 		</script>
+		<script
+			async
+			src="https://umami.tools.sshawn.com/script.js"
+			data-website-id="a38543c8-1482-46a1-ade5-8d6e3eb104d1"
+		></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
